Fixed potential invalid memory access in OpenGL engine glyph cache.

We need to clamp glyph_height to prevent from overflowing the texture
cache. A slightly similar issue was fixed for glyph_width in change
9520674b0f02aac55da6. Also, we should only increment the y_offset in
the place where we check for an overflow.

Task-number: QTBUG-26649

Change-Id: I297191b2ffd68a636bfced7f5284fd3b9383e988
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>